--- a/public/css/style.css
+++ b/public/css/style.css
@@ -615,3 +615,14 @@ form label {
     font-size: 14px;
     font-weight: bold;
 }
+
+.icon {
+    width: 50px;
+    height: 50px;
+    background-color: #eee;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 39px;
+}
